--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body {
   background-color: rgb(225, 220, 220);
 }
 .btn:hover {
-  background-color: white; /* Change this to the desired color */
+  background-color: rgb(79, 105, 251); /* Change this to the desired color */
   color: black; /* Change text color if needed */
+  border-color: black;
+  font-weight: bold;
 }
 
 .center-container {
