--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(225, 220, 220);
+  font-family: "DM Sans", sans-serif;
 }
 .btn:hover {
   background-color: rgb(79, 105, 251); /* Change this to the desired color */
